[gd_scene load_steps=3 format=3 uid="uid://qppc6sbc1cn0"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme.tres" id="1"]
[ext_resource type="Script" path="res://src/screens/create-manager/create_manager.gd" id="2"]

[node name="CreateManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -105.0
offset_right = 129.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "NAME"

[node name="Name" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SurNameLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "SURNAME"

[node name="SurName" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NatLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "NATIONALITY"

[node name="Nat" type="OptionButton" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "CANCEL"
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "CONTINUE"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
